Creación del componente de Historial

--- a/src/app/comun/configuracion/configuracion.component.html
+++ b/src/app/comun/configuracion/configuracion.component.html
@@ -46,8 +46,14 @@
         </div>
 
         <div class="opcion">
+            <botonComponent mat-button [mat-dialog-close]="'Data Sync'" [texto]="'Data Sync'" [tipoBoton]="2" [color]="'naranja'" class="boton Arial"></botonComponent>
+        </div>
+
+        <!--
+        <div class="opcion">
             <botonComponent mat-button [mat-dialog-close]="'ForzarSync'" [texto]="'ForzarSync'" [tipoBoton]="2" [color]="'naranja'" class="boton Arial"></botonComponent>
         </div>
+        -->
 
 </div>
 
