--- a/src/app/comun/enemigo/enemigo.component.sass
+++ b/src/app/comun/enemigo/enemigo.component.sass
@@ -182,6 +182,8 @@ $highlightObjetivoColor: red
   animation-iteration-count: infinite
   animation-direction: alternate
 
+//#animacionNumero
+//  position: absolute
 
 @keyframes highlightObjetivoEnemigo
   0%
@@ -201,16 +203,6 @@ $highlightObjetivoColor: red
   100%
     background: rgba(211, 211, 211, 0)
 
-// .animacionNumero
-//   position: absolute
-//   font-size: 100px
-//   background-size: 100%
-//   top: -50%
-//   left: 40%
-//   width: 100%
-//   padding-top: 37.62%
-//   z-index: 10
-//   opacity: 0
 
 // .animacionNumero.activo
 //   animation: animacionNumero
