--- a/src/app/comun/panel-control/panel-control.component.html
+++ b/src/app/comun/panel-control/panel-control.component.html
@@ -40,7 +40,7 @@
 	<!-- Indicador Vida -->
 	<div class="contenedorVida">
 		<img class="fondoIndicador" src="assets/ui/icons/fondo-vida.png"/>
-        <div class="valorIndicador Texto1">{{vida}}</div>
+        <div class="valorIndicador Texto1">{{vida | number : '1.0-0'}}</div>
 	</div>
 
 	<!-- Indicador Energia -->
