--- a/src/app/comun/inmap/inmap.component.sass
+++ b/src/app/comun/inmap/inmap.component.sass
@@ -154,6 +154,17 @@
       margin-left: -15%
       z-index: 10
 
+    #botonIniciarPartida
+      position: absolute
+      width: 30%
+      height: 10%
+      bottom: 5%
+      left: 30%
+      z-index: 10
+      botonComponent
+        position: absolute
+        width: 100%
+        height: 100%
      
     #experiencia
       position: absolute
