--- a/src/app/comun/interfaz/interfaz.component.sass
+++ b/src/app/comun/interfaz/interfaz.component.sass
@@ -264,6 +264,58 @@
             height: 100%
 
 //*************************************************
+//          Interfaz Golpe Oportunidad:
+//************************************************* -->
+
+#contenedorInterfazOportunidad
+    position: absolute
+    background-color: $colorFondo2
+    color: $colorTexto
+    width: 30vw
+    top: 15vh
+    left: 35vw
+
+    .tituloInterfaz
+      margin-top: 10px
+
+    .hechizo
+        position: relative
+        display: inline-block
+        height: 10vw
+        width: 10vw
+        left: 10vw
+        top: 2vh
+        overflow: hidden
+        background-size: 100%
+
+    .hechizo:hover
+        color: black
+        background-color: rgba(255,255,255,0.6)
+        .opcionesGenerales
+            position: relative
+            width: 100%
+            height: 100%
+
+    .textoExplicativo
+      margin: 10px
+      text-align: center
+
+    .contenedorBotones
+        position: relative
+        display: flex
+        flex-direction: row
+        justify-content: space-around
+        align-content: center
+        width: 100%
+        height: 2em
+        margin-bottom: 10px
+
+        .boton
+            position: relative
+            width: 40%
+            height: 100%
+
+//*************************************************
 //          Interfaz Detalle Enemigo / Heroe:
 //************************************************* -->
 
